--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "typescript-action",
+  "name": "salty-issue-detector",
   "version": "0.0.0",
   "private": true,
   "description": "TypeScript template action",
-  "main": "lib/main.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "ncc build src/main.ts",
     "test": "jest"
   },
   "repository": {
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.4",
+    "@zeit/ncc": "^0.20.5",
     "jest": "^24.8.0",
     "jest-circus": "^24.7.1",
     "ts-jest": "^24.0.2",
