--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,13 @@
-name: "Test typescript-action"
+name: 'Test typescript-action'
 on:
-  pull_request:
-  push:
-    branches:
-      - master
-      - 'releases/*'
+  issues:
+    types: [opened]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-
-    - run: npm ci
-    - run: npm run build
-    - run: npm test
-    - uses: ./
-      with: 
-        milliseconds: 1000
+      - uses: actions/checkout@v1
+      - uses: ./
+        with:
+          milliseconds: 1000
