ope: forgot to include github-token

--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,10 @@ inputs:
   myInput: # change this
     description: 'input description here'
     default: 'default value if applicable'
+  github-token:
+    description: 'Github token'
+    required: true
+
 runs:
   using: 'node12'
   main: 'dist/index.js'
