--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.0.0",
-    "@actions/github": "^1.1.0"
+    "@actions/github": "^1.1.0",
+    "natural": "^0.6.3"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
+    "@types/natural": "^0.6.1",
     "@types/node": "^12.0.4",
     "@zeit/ncc": "^0.20.5",
     "jest": "^24.8.0",
