--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "ncc build src/main.ts && npm run copy",
-    "copy": "cp -R ./node_modules/natural/lib/natural/sentiment/English dist",
+    "copy": "cp -R ./node_modules/natural/lib/natural/sentiment/English dist && mkdir -p dist/node_modules && cp -r ./node_modules/afinn-165 dist/node_modules/afinn-165",
     "test": "jest"
   },
   "repository": {
