Switch to debugging

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "TypeScript template action",
   "main": "dist/index.js",
   "scripts": {
+    "dist-prep": "tsc && npm prune --production",
     "build": "tsc",
     "test": "jest"
   },
